# nova-act-mcp

./: .gitignore  README.md  nova_mcp.py  pyproject.toml  run_tests.sh  simple_inspect_demo.py  test_mcp_inspector.sh
.github/workflows/: ci.yml
assets/: plan_diagram.mmd
docs/assets/: flowchart TD.mmd  simple_flow.mmd
docs/legacy_testing/: README.md
examples/: demo_inspect_browser.py  diagnostic_html_logs.py  pizza_order_demo.py  simple_form_demo.py  simple_inspect_demo.py
src/nova_mcp_server/: __init__.py  config.py  main_cli.py
src/nova_mcp_server/tools/: __init__.py  actions_end.py  actions_execute.py  actions_inspect.py  actions_start.py  browser_control.py  file_transfer.py  log_management.py  session_listing.py
tests/: README.md  test_inline_execute.py  test_nova_mcp_integration.py  test_screenshot_compression.py
tests/assets/: mock_output.html
tests/functional/: test_nl_agent_workflows.py
tests/integration/: test_agent_visual_workflow.py  test_browser_execution.py  test_inspect_browser.py  test_log_access.py  test_mcp_inspector_cli.py  test_mcp_inspector_cli.py.bak  test_natural_language_interactions.py  test_nova_mcp_integration.py  test_screenshot_compression.py  test_screenshot_file_integration.py  test_session_management.py
tests/mock/: test_nova_mcp_basic.py  test_nova_mcp_mock.py
tests/unit/: test_inspect_actions.py  test_log_compression.py  test_screenshot_file_saving.py  test_tool_registration.py
