[project]
name = "nova-act-mcp"
version = "0.2.0"
description = "An MCP server providing tools to control web browsers using the Amazon Nova Act SDK"
authors = [
    {name = "Jacob Taunton", email = "jandrewt82@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "pydantic>=2.0.0",
    "nova-act>=1.0.0",
    "playwright>=1.42.0",
    "asyncio-extras>=1.3.2",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.urls]
"Homepage" = "https://github.com/madtank/nova-act-mcp"
"Bug Tracker" = "https://github.com/madtank/nova-act-mcp/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
nova-act = [
  "nova-act>=1.0.0",
  "playwright>=1.43",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio",
]

[project.scripts]
nova-act-mcp = "nova_mcp:main"

# Explicitly specify the py_modules to include only nova_mcp.py
[tool.setuptools]
py-modules = ["nova_mcp"]
